2004-03-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/include/music-output.hh (process): Change signature to
	return SCM.

	* lily/paper-book.cc (classic_output, get_title, get_scopes): New
	method.

	* lily/paper-score.cc (process): Return stencils rather than
	outputting directly.  Remove paper-book kludge.  Delete grobs.
	(output): Remove.

	* lily/include/paper-score.hh (class Paper_score): Remove outputter_.

	* lily/score-engraver.cc (get_output): Do not reset pscore_.

	* lily/score.cc (default_rendering)
	(ly_render_output): Move adding paper-score two levels up.

	* lily/system.cc (get_line):
	* lily/paper-outputter.cc (output_line): Fix `between-system-string'.

2004-03-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/font.scm (paper20-font-vector): add more design sizes for
	number.

	* mf/GNUmakefile (depth): remove feta-din{11,13,19}, remove
	feta-nummber{5,7,11,13}.

	* scm/font.scm (paper20-font-vector): bugfix: use din12, not 10
	for 12pt design size. 

2004-03-09  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* ly/engraver-init.ly: don't remove slur engraver from DrumVoice.

2004-03-09  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/font-select.cc (properties_to_font_size_family): Fix
	warning message.

	* Experimental PostScript latin1 encoding:
	
	* mf/GNUmakefile (SAUTER_FONTS): Add ecmb14 ecrm12.

	* scm/output-ps.scm: Experimental encoding using reencode-font.
	* scm/font.scm: Add latin1 `font-shape'.
	
	* scm/define-markup-commands.scm (latin-i): New font-shape command. 

	* ps/lilyponddefs.ps (reencode-font): New function.

	* lily/paper-book.cc (get_pages): Simplistic page breaking.

	* scm/output-tex.scm (start-page):
	(stop-page): New interface function.

2004-03-08  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/paper-outputter.cc (output_expr):
	(output_header):
	(output_line): New method.

	* lily/system.cc (get_line):
	(get_lines): New method.
	(output_scheme):
	(output_line): Remove.

	* scm/lily.scm (make-title): New function.
