@@ -1,5 +1,8 @@
 2004-03-09  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/include/paper-book.hh (PAGE_LAYOUT): Define as "ps"; make
+	switch runtime.
+
 	* lily/include/music-output.hh (process): Change signature to
 	return SCM.
 
